# obs-studio

plugins/: CMakeLists.txt
plugins/win-virtual-desktop-switch/: CMakeLists.txt  plugin-main.cpp  win-virt-desktop.cpp  win-virt-desktop.h
